--- a/sass/pages/studio/_clients.scss
+++ b/sass/pages/studio/_clients.scss
@@ -6,22 +6,38 @@
 .clients-list {
   display: flex;
   justify-content: space-between;
+
+  @media screen and (min-width: $tablet) {
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: $desktop) {
+    flex-wrap: nowrap;
+  }
 }
 
 .clients-title {
   font-weight: 700;
-  font-size: 36px;
+
   line-height: 1.17;
   text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 28px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 36px;
+  }
 }
 
 .clients-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+
   height: 92px;
   fill: #afb1b8;
   border: 1px solid #afb1b8;
@@ -32,5 +48,11 @@
     fill: $blue-color;
     border: 1px solid $blue-color;
     cursor: pointer;
+  }
+  @media screen and (min-width: $tablet) {
+    width: calc((100% - 30px) / 3);
+  }
+  @media screen and (min-width: $desktop) {
+    width: 170px;
   }
 }
