--- a/css/main.css
+++ b/css/main.css
@@ -638,8 +638,20 @@
 
 .command-section {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+}
+
+@media screen and (min-width: 768px) {
+  .command-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .command-photo {
@@ -695,6 +707,18 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .command-item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command-item:nth-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
 .command-person {
   color: #757575;
   font-weight: 400;
@@ -717,11 +741,24 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   padding-right: 32px;
   padding-left: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .social-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .social-list {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
 .social-network {
@@ -748,9 +785,18 @@
 }
 
 /* Постоянные клиенты */
-.clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 768px) {
+  .clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients-list {
@@ -830,6 +876,18 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .clients-icon:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-icon:nth-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 /* Футер страницы */
 .footer {
   background-color: #2f303a;
@@ -852,11 +910,22 @@
   text-decoration: none;
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
   line-height: 1.19;
   margin-top: 0;
   margin-bottom: 20px;
   display: inline-block;
+}
+
+@media screen and (min-width: 768px) {
+  .logo-footer {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    font-size: 26px;
+  }
 }
 
 .footer-address {
@@ -927,13 +996,24 @@
 }
 
 .footer-form input {
-  width: 358px;
   height: 50px;
   padding: 15px 16px;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   margin-right: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form input {
+    width: 358px;
+  }
 }
 
 .container-footer-form {
@@ -1045,12 +1125,22 @@
   margin-bottom: 30px;
 }
 
-.portfolio-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .portfolio-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
 }
 
-.portfolio-item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 1200px) {
+  .portfolio-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-item:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .portfolio-item:hover {
@@ -1096,7 +1186,18 @@
 .portfolio-img {
   margin-top: 0;
   margin-bottom: 20px;
-  width: 370px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-img {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-img {
+    width: 370px;
+  }
 }
 
 .portfolio-title {
