--- a/sass/pages/portfolio/_portfolio.scss
+++ b/sass/pages/portfolio/_portfolio.scss
@@ -6,7 +6,13 @@
 }
 
 .portfolio {
-  padding-bottom: 94px;
+  @media screen and (min-width: $tablet) {
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-item {
@@ -21,14 +27,14 @@
   &:nth-child(3n) {
     margin-right: 0;
   }
+}
 
-  &:hover {
-    background: #ffffff;
-    border: 1px solid #eeeeee;
-    box-sizing: border-box;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+&:hover {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .container-photo {
@@ -62,7 +68,14 @@
 .portfolio-img {
   margin-top: 0;
   margin-bottom: 20px;
-  width: 370px;
+
+  @media screen and (min-width: $tablet) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 370px;
+  }
 }
 
 .portfolio-title {
