--- a/sass/pages/portfolio/_portfolio.scss
+++ b/sass/pages/portfolio/_portfolio.scss
@@ -21,20 +21,34 @@
   border: 1px solid #eeeeee;
   margin-bottom: 30px;
 
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  @media screen and (min-width: $tablet) {
+    &:nth-last-child(-n + 1) {
+      margin-bottom: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
-}
+  @media screen and (min-width: $desktop) {
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+    &:nth-child(2n) {
+      margin-right: 30px;
+    }
 
-&:hover {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
+  }
+
+  &:hover {
+    background: #ffffff;
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .container-photo {
@@ -67,10 +81,9 @@
 
 .portfolio-img {
   margin-top: 0;
-  margin-bottom: 20px;
 
   @media screen and (min-width: $tablet) {
-    width: 354px;
+    width: 352px;
   }
 
   @media screen and (min-width: $desktop) {
