--- a/css/main.css
+++ b/css/main.css
@@ -245,13 +245,14 @@
 .list {
   margin-top: 0;
   margin-bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
 }
 
 @media screen and (min-width: 768px) {
   .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -webkit-box-pack: justify;
@@ -412,12 +413,7 @@
   background-image: url("../images.new/office-copy.jpg");
   background-size: contain;
   background-color: #2f303a;
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    height: 400px;
-  }
+  height: 400px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -433,13 +429,8 @@
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-}
-
-@media screen and (min-width: 768px) {
-  .main-section {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -453,12 +444,7 @@
   color: #ffffff;
   margin-top: 0;
   margin-bottom: 30px;
-}
-
-@media screen and (min-width: 768px) {
-  .main-section-title {
-    font-size: 26px;
-  }
+  font-size: 26px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -481,11 +467,9 @@
   cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
-  .activity-section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.activity-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -535,7 +519,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 270px;
+  width: 450px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -564,6 +548,13 @@
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .activity-title {
+    text-align: center;
+  }
 }
 
 .activity-text {
@@ -638,13 +629,8 @@
 
 .command-section {
   background-color: #f5f4fa;
-}
-
-@media screen and (min-width: 768px) {
-  .command-section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -657,6 +643,7 @@
 .command-photo {
   margin-top: 0;
   margin-bottom: 30px;
+  width: 450px;
   display: block;
 }
 
@@ -707,6 +694,12 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .command-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .command-item:nth-child(-n + 2) {
     margin-bottom: 30px;
@@ -743,14 +736,9 @@
   display: flex;
   padding-right: 32px;
   padding-left: 32px;
-}
-
-@media screen and (min-width: 768px) {
-  .social-list {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -785,11 +773,9 @@
 }
 
 /* Постоянные клиенты */
-@media screen and (min-width: 768px) {
-  .clients {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -828,12 +814,7 @@
   text-align: center;
   margin-top: 0;
   margin-bottom: 50px;
-}
-
-@media screen and (min-width: 768px) {
-  .clients-title {
-    font-size: 28px;
-  }
+  font-size: 28px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1259,6 +1240,7 @@
 .container-photo {
   position: relative;
   overflow: hidden;
+  margin-bottom: 20px;
 }
 
 .container-photo::before {
