--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -28,9 +28,10 @@
 .list {
   margin-top: 0;
   margin-bottom: 0;
-  display: flex;
+  display: block;
 
   @media screen and (min-width: $tablet) {
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
