--- a/sass/pages/studio/_activity-section.scss
+++ b/sass/pages/studio/_activity-section.scss
@@ -1,10 +1,8 @@
 // секция, чем мы занимаемся
 
 .activity-section {
-  @media screen and (min-width: $tablet) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   @media screen and (min-width: $desktop) {
     padding-top: 94px;
@@ -36,7 +34,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
+  width: 450px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -61,6 +59,11 @@
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
+  text-align: center;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 .activity-text {
   color: $secondary-black-color;
