--- a/sass/pages/studio/_main-hero.scss
+++ b/sass/pages/studio/_main-hero.scss
@@ -7,7 +7,8 @@
   justify-content: center;
   margin-right: auto;
   background-image: url("../images.new/office-copy.jpg");
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-color: #2f303a;
   height: 400px;
 
