--- a/sass/general/_footer-page.scss
+++ b/sass/general/_footer-page.scss
@@ -50,7 +50,11 @@
     font-size: 26px;
   }
 }
-
+.footer-contact-list {
+  @media screen and (max-width: $tablet) {
+    text-align: center;
+  }
+}
 .footer-address {
   color: $white-color;
 
@@ -131,9 +135,12 @@
     background-color: #2f303a;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
-    margin-right: 12px;
+
     width: 450px;
 
+    @media screen and (min-width: $tablet) {
+      margin-right: 12px;
+    }
     @media screen and (min-width: $desktop) {
       width: 358px;
     }
@@ -143,6 +150,7 @@
     flex-direction: row;
   }
 }
+
 .footer-address-and-social-media {
   display: blok;
 
