--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,17 @@
           transform: translate(-50%, -50%);
   padding-right: 40px;
   padding-left: 40px;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   z-index: 500;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal-title {
@@ -58,13 +65,20 @@
 
 .modal-form textarea {
   resize: none;
-  width: 448px;
+  width: 370px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 16px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form textarea {
+    width: 448px;
+    height: 120px;
+  }
 }
 
 .modal-form-container {
@@ -99,7 +113,7 @@
 }
 
 .information-input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -108,6 +122,13 @@
   border-radius: 4px;
   margin-top: 0;
   cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .information-input {
+    width: 448px;
+    height: 40px;
+  }
 }
 
 .information-label {
@@ -161,10 +182,28 @@
 }
 
 .politics {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   color: #757575;
   margin-left: 7px;
+}
+
+@media screen and (min-width: 1200px) {
+  .politics {
+    font-size: 14px;
+  }
+}
+
+.politics-contract {
+  font-size: 12px;
+  line-height: 1.7;
+  color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .politics-contract {
+    font-size: 14px;
+  }
 }
 
 .politics-container {
@@ -186,12 +225,6 @@
   cursor: pointer;
 }
 
-.politics-contract {
-  font-size: 14px;
-  line-height: 1.7;
-  color: #2196f3;
-}
-
 .button-form {
   width: 200px;
   font-weight: 700;
@@ -208,12 +241,16 @@
 }
 
 .header-container {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .logo {
@@ -423,6 +460,22 @@
 
 .button-menu.is-open .icon-burger {
   display: none;
+}
+
+.content-menu {
+  position: absolute;
+  display: none;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  background-color: pink;
+  padding: 20px;
+  text-align: center;
+  font-size: 12px;
+}
+
+.content-menu.is-open {
+  display: block;
 }
 
 .hero {
