--- a/sass/pages/studio/_modal-form.scss
+++ b/sass/pages/studio/_modal-form.scss
@@ -22,11 +22,15 @@
   padding-right: 40px;
   padding-left: 40px;
 
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: $white-color;
-
   z-index: 500;
+
+  @media screen and (min-width: $desktop) {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal-title {
   font-weight: 700;
@@ -44,12 +48,17 @@
 
   & textarea {
     resize: none;
-    width: 448px;
+    width: 370px;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     box-sizing: border-box;
     border-radius: 4px;
     padding: 12px 16px;
+
+    @media screen and (min-width: $desktop) {
+      width: 448px;
+      height: 120px;
+    }
   }
 }
 .modal-form-container {
@@ -77,7 +86,7 @@
 }
 
 .information-input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -85,6 +94,11 @@
   border-radius: 4px;
   margin-top: 0;
   cursor: pointer;
+
+  @media screen and (min-width: $desktop) {
+    width: 448px;
+    height: 40px;
+  }
 }
 
 .information-label {
@@ -130,10 +144,24 @@
 }
 
 .politics {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.7;
   color: $secondary-black-color;
   margin-left: 7px;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+  }
+}
+
+.politics-contract {
+  font-size: 12px;
+  line-height: 1.7;
+  color: $blue-color;
+
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+  }
 }
 
 .politics-container {
@@ -146,12 +174,6 @@
   width: 15px;
   height: 15px;
   cursor: pointer;
-}
-
-.politics-contract {
-  font-size: 14px;
-  line-height: 1.7;
-  color: $blue-color;
 }
 
 .button-form {
