--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./general/footer-page";
 @import "./pages/portfolio/filters";
 @import "./pages/portfolio/portfolio";
+@import "./general/menu";
 
 html {
   box-sizing: border-box;
