--- a/sass/pages/studio/_activity-section.scss
+++ b/sass/pages/studio/_activity-section.scss
@@ -17,6 +17,7 @@
     width: auto;
   }
 }
+
 .activity-item:not(:last-child) {
   @media screen and (min-width: $desktop) {
     margin-right: 30px;
@@ -72,7 +73,7 @@
   font-size: 14px;
   line-height: 1.7;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0px;
 }
 /* чем мы занимаемся */
 
