--- a/sass/general/_header.scss
+++ b/sass/general/_header.scss
@@ -1,8 +1,20 @@
 .header-container {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.header-mobile-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
 }
 //  логотип в шапке профиля
 .logo {
