--- a/sass/pages/studio/_activity-section.scss
+++ b/sass/pages/studio/_activity-section.scss
@@ -23,6 +23,11 @@
     margin-right: 30px;
   }
 }
+.activity-item:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+}
 .activity-item:nth-child(-n + 2) {
   @media screen and (min-width: $tablet) {
     margin-bottom: 30px;
