--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./pages/portfolio/filters";
 @import "./pages/portfolio/portfolio";
 @import "./general/menu";
+@import "./general/mobail-social-networks-menu";
 
 html {
   box-sizing: border-box;
