--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (max-width: 767px) {
@@ -270,6 +271,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (min-width: 768px) {
@@ -305,6 +307,7 @@
 }
 
 .list {
+  padding-top: 33px;
   margin-top: 0;
   margin-bottom: 0;
   display: block;
@@ -320,6 +323,7 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding-top: 0;
   }
 }
 
@@ -334,6 +338,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   margin-left: auto;
 }
 
@@ -355,53 +366,131 @@
   }
 }
 
+.link-item-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  padding-left: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-item-page {
+    padding-left: 0;
+  }
+}
+
+.link-item-page:nth-last-child(-n + 2) {
+  margin-bottom: 302px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-item-page:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+.link-item-page:not(:last-child) {
+  margin-bottom: 35px;
+}
+
 @media screen and (min-width: 768px) {
   .link-item-page:not(:last-child) {
     margin-right: 50px;
+    margin-bottom: 0;
+  }
+}
+
+.link-contact-item {
+  padding-left: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-contact-item {
+    padding-left: 0;
+  }
+}
+
+.link-contact-item:first-child > .link-header {
+  font-size: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-contact-item:first-child > .link-header {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .link-contact-item:first-child > .link-header {
+    font-size: 14px;
+  }
+}
+
+.link-contact-item:last-child {
+  margin-bottom: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-contact-item:last-child {
+    margin-bottom: 0px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .link-contact-item:not(:last-child) {
+  .link-contact-item:first-child {
     margin-bottom: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .link-contact-item:not(:last-child) {
+  .link-contact-item:first-child {
     margin-right: 50px;
   }
 }
 
-.link-active-page {
-  position: relative;
-}
-
-.link-active-page::after {
-  position: absolute;
-  content: " ";
-  width: 100%;
-  height: 4px;
-  bottom: 0;
-  left: 0;
-  background-color: #2196f3;
-  border-radius: 2px;
+@media screen and (min-width: 768px) {
+  .link-active-page {
+    position: relative;
+  }
+  .link-active-page::after {
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
 }
 
 .link-page {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
-  text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  font-size: 40px;
+  line-height: 1.17;
+  text-decoration: none;
+  color: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-page:hover, .link-page:focus {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .link-page {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+  }
 }
 
 .active-page {
@@ -409,17 +498,13 @@
 }
 
 .link-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-decoration: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #757575;
   font-weight: 500;
-  line-height: 1.4;
-  letter-spacing: 0.02em;
+  font-size: 34px;
+  line-height: 40px;
+  color: #757575;
+  text-decoration: none;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-header:hover, .link-header:focus {
@@ -429,6 +514,14 @@
 @media screen and (min-width: 768px) {
   .link-header {
     font-size: 12px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    line-height: 1.4;
+    letter-spacing: 0.02em;
   }
 }
 
@@ -439,10 +532,18 @@
 }
 
 .icon-mail {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: #757575;
+}
+
+@media screen and (max-width: 767px) {
+  .icon-mail {
+    display: none;
+  }
 }
 
 .link-header:hover .icon-mail,
@@ -451,10 +552,18 @@
 }
 
 .icon-tel {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 10px;
   height: 16px;
   margin-right: 10px;
   fill: #757575;
+}
+
+@media screen and (max-width: 767px) {
+  .icon-tel {
+    display: none;
+  }
 }
 
 .link-header:hover .icon-tel,
@@ -823,17 +932,23 @@
   padding: 12px;
   width: 44px;
   height: 44px;
+  border-radius: 50%;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-network:hover, .social-network:focus {
   background-color: #2196f3;
-  border-radius: 50%;
 }
 
 .social-svg {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-network:hover .social-svg,
@@ -902,6 +1017,8 @@
   border: 1px solid #afb1b8;
   border-radius: 4px;
   width: calc((100% - 30px) / 2);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon:hover, .clients-icon:focus {
@@ -1221,10 +1338,8 @@
 }
 
 /* Фильтры */
-@media screen and (min-width: 768px) {
-  .filters-section {
-    padding-top: 60px;
-  }
+.filters-section {
+  padding-top: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1237,6 +1352,16 @@
   margin-right: 8px;
 }
 
+.filters:nth-last-child(2n) {
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .filters:nth-last-child(2n) {
+    margin-bottom: 0;
+  }
+}
+
 .filters:last-child {
   margin-right: 0;
 }
@@ -1245,11 +1370,30 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .filters-list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .filters-list {
+    margin-bottom: 50px;
+  }
 }
 
 .filters button {
@@ -1260,6 +1404,8 @@
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters button:hover, .filters button:focus {
@@ -1274,6 +1420,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -1290,12 +1439,14 @@
 
 .portfolio-item {
   margin-left: 0;
-  margin-right: 30px;
   border: 1px solid #eeeeee;
   margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
+  .portfolio-item {
+    margin-right: 25px;
+  }
   .portfolio-item:nth-last-child(-n + 1) {
     margin-bottom: 0;
   }
@@ -1343,8 +1494,8 @@
   padding: 63px 24px;
   background-color: #2196f3;
   position: absolute;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1358,12 +1509,14 @@
 }
 
 .portfolio-img {
+  display: block;
   margin-top: 0;
+  width: 450px;
 }
 
 @media screen and (min-width: 768px) {
   .portfolio-img {
-    width: 352px;
+    width: 354px;
   }
 }
 
@@ -1393,7 +1546,7 @@
 }
 
 .button-menu {
-  z-index: 1;
+  z-index: 2;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -1420,6 +1573,11 @@
   }
 }
 
+.button-menu:hover svg,
+.button-menu:focus svg {
+  fill: #2196f3;
+}
+
 @media screen and (max-width: 767px) {
   .content-menu {
     display: none;
@@ -1436,6 +1594,7 @@
   }
   .content-menu.is-open {
     display: block;
+    z-index: 1;
   }
 }
 
@@ -1443,6 +1602,39 @@
   .content-menu {
     display: none;
   }
+}
+
+.list-menu-social-networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  padding-left: 25px;
+  margin-top: 64px;
+}
+
+.list-item-menu-social-networks:not(:last-child) {
+  margin-right: 10px;
+}
+
+.link-menu-social-networks {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+  text-decoration: none;
+  color: #2196f3;
+}
+
+.container-menu-social-networks {
+  height: 22px;
+  width: 1px;
+  background-color: #d3d3d3;
+}
+
+.list-item-container-menu-social-networks {
+  margin-right: 10px;
 }
 
 html {
