--- a/sass/general/_menu.scss
+++ b/sass/general/_menu.scss
@@ -1,6 +1,6 @@
 // меню в хедере
 .button-menu {
-  z-index: 1;
+  z-index: 2;
   display: inline-flex;
   padding: 0;
   background: white;
@@ -19,6 +19,11 @@
   }
   @media screen and (min-width: $tablet) {
     display: none;
+  }
+
+  &:hover svg,
+  &:focus svg {
+    fill: $blue-color;
   }
 }
 
@@ -39,6 +44,7 @@
 
     &.is-open {
       display: block;
+      z-index: 1;
     }
   }
   @media screen and (min-width: $tablet) {
