--- a/sass/pages/portfolio/_filters.scss
+++ b/sass/pages/portfolio/_filters.scss
@@ -1,8 +1,6 @@
 /* Фильтры */
 .filters-section {
-  @media screen and (min-width: $tablet) {
-    padding-top: 60px;
-  }
+  padding-top: 60px;
 
   @media screen and (min-width: $desktop) {
     padding-top: 94px;
@@ -11,7 +9,13 @@
 
 .filters {
   margin-right: 8px;
+  &:nth-last-child(2n) {
+    margin-bottom: 15px;
 
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 0;
+    }
+  }
   &:last-child {
     margin-right: 0;
   }
@@ -19,9 +23,20 @@
 
 .filters-list {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: start;
+  // justify-content: center;
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: $tablet) {
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 30px;
+    @media screen and (min-width: $desktop) {
+      margin-bottom: 50px;
+    }
+  }
 }
 
 .filters button {
@@ -34,7 +49,8 @@
   border: none;
 
   padding: 6px 22px;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: $white-color;
