--- a/sass/pages/portfolio/_portfolio.scss
+++ b/sass/pages/portfolio/_portfolio.scss
@@ -3,6 +3,7 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .portfolio {
@@ -17,11 +18,12 @@
 
 .portfolio-item {
   margin-left: 0;
-  margin-right: 30px;
+
   border: 1px solid #eeeeee;
   margin-bottom: 30px;
 
   @media screen and (min-width: $tablet) {
+    margin-right: 25px;
     &:nth-last-child(-n + 1) {
       margin-bottom: 0;
     }
@@ -70,7 +72,7 @@
 
     background-color: $blue-color;
     position: absolute;
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0.8;
   }
@@ -81,10 +83,12 @@
 }
 
 .portfolio-img {
+  display: block;
   margin-top: 0;
+  width: 450px;
 
   @media screen and (min-width: $tablet) {
-    width: 352px;
+    width: 354px;
   }
 
   @media screen and (min-width: $desktop) {
