--- a/sass/pages/studio/_clients.scss
+++ b/sass/pages/studio/_clients.scss
@@ -41,6 +41,7 @@
   border: 1px solid #afb1b8;
   border-radius: 4px;
   width: calc((100% - 30px) / 2);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
