--- a/sass/pages/studio/_command-section.scss
+++ b/sass/pages/studio/_command-section.scss
@@ -110,11 +110,12 @@
   padding: 12px;
   width: 44px;
   height: 44px;
-
+  border-radius: 50%;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     background-color: $blue-color;
-    border-radius: 50%;
   }
 }
 
@@ -122,6 +123,7 @@
   width: 20px;
   height: 20px;
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .social-network:hover &,
   .social-network:focus & {
