--- a/sass/pages/portfolio/_portfolio.scss
+++ b/sass/pages/portfolio/_portfolio.scss
@@ -3,7 +3,7 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .portfolio {
