--- a/sass/pages/studio/_activity-section.scss
+++ b/sass/pages/studio/_activity-section.scss
@@ -67,7 +67,10 @@
   line-height: 1.14;
   text-align: center;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: $tablet) {
+    text-align: left;
+  }
+  @media screen and (min-width: $desktop) {
     text-align: center;
   }
 }
